desktop-themes/BlackMATE/gtk-3.0/gtk-widgets.css
* {
	padding: 0px;
	background-clip: padding-box;
	/* Style properties */
	-GtkToolButton-icon-spacing: 4;
	-textview-error-underline-color: @error_color;
	-paned-handle-size: 5;
	-scrolledwindow-scrollbar-spacing: 0;
	/* this is more stylish with this theme */;
	-GtkToolItemGroup-expander-size: 12;
	-expander-expander-size: 12;
	-treeview-expander-size: 13;
	-treeview-horizontal-separator: 4;
	-GtkIMHtml-hyperlink-color: @link_color;
	-GtkHTML-link-color: @link_color;
	-WnckTasklist-fade-overlay-rect: 0;
	/* this makes emacs behave weirdly */
	/*border-radius: 3px;*/
	/* disable focusline on active notebook tabs if focused*/
	-GtkWindow-resize-grip-width: 14;
	-GtkWindow-resize-grip-height: 12; 
	outline-color: @focus_border;
	outline-style: dashed;
	outline-offset: 2px;
	outline-width: 0px; /* disable ugly focus-line */
	-gtk-icon-style: regular; /* no symbolic icons */
    text-shadow: none;
}

/***************
 * Base States *
 ***************/
.background {
	color: @theme_fg_color;
	background-color: @theme_bg_color;
	border-style: none;
	border-width: 0px;
	border-radius: 0px;
}

.background:backdrop {
	text-shadow: none;
	-gtk-icon-shadow: none;
}

*:hover {
	background-color: alpha(shade(@theme_bg_color, 1.1), 1.0);
	color: @theme_fg_color;
}

*:selected {
	background-color: shade(@theme_selected_bg_color, 1.23);
	color: @theme_selected_fg_color;
}

*:selected:focus {
	background-color: @theme_selected_bg_color;
	color: @theme_selected_fg_color;
}

*:selected:backdrop {
	text-shadow: none;
	-gtk-icon-shadow: none;
}

*:disabled {
	background-color: @less_dark_color; /*@insensitive_bg_color;*/
	color: @insensitive_fg_color;
	border-color: @insensitive_border_color;
}

*:active {
	background-color: shade(@theme_bg_color, 0.915);
}

.gtkstyle-fallback {
	background-color: @theme_bg_color;
	color: @theme_fg_color;
}

.gtkstyle-fallback:hover {
	background-color: shade(@theme_bg_color, 1.10);
	color: @theme_fg_color;
}

.gtkstyle-fallback:active {
	background-color: shade(@theme_bg_color, 0.915);
	color: @theme_fg_color;
}

.gtkstyle-fallback:disabled {
	background-color: @less_dark_color; /*@insensitive_bg_color;*/
	color: @insensitive_fg_color;
	border-color: @insensitive_border_color;
 }

.gtkstyle-fallback:selected {
	background-color: @theme_selected_bg_color;
	color: @theme_selected_fg_color;
}

/************
 * Tooltips *
 ************/

tooltip,
tooltip.background {
	padding: 4px 4px;
	border-style: solid;
	border-width: 2px;
	border-radius: 3px;
	border-color: #888a85; 
	background-color: @theme_tooltip_bg_color;
	color: @theme_tooltip_fg_color;
}

tooltip * {
	background-color: @theme_tooltip_bg_color;
	color: @theme_tooltip_fg_color;
}


/*****************
 * Miscellaneous *
 *****************/

content-view.view.rubberband,
.content-view.view.rubberband,
view.rubberband,
.view.rubberband,
rubberband,
.rubberband {
	background-color: alpha(@theme_selected_bg_color, 0.35);

	border-color: @theme_selected_bg_color;
	border-style: solid;
	border-width: 1px;
	border-radius: 2px;
}

expander {
    -gtk-icon-style: regular;
}

/***********
 * Sidebar *
 ***********/
sidebar *,
sidebar .view,
stacksidebar,
stacksidebar .view,
placessidebar .view{
    -gtk-icon-style: regular;
    background-color: shade (@theme_bg_color, 1.08);
}

stacksidebar label,
placessidebar label   {
	color:@theme_text_color;
    padding: 8px 1px 8px 1px;
}

placessidebar image   {
  -gtk-icon-style: regular;
}

sidebar frame {
    border-style: none;
}

sidebar:backdrop {
    background-color: shade (@theme_bg_color, 1.08);
}

placessidebar button{
	background-color: transparent;
	background-image: none;
	border-style:none;
	border-image:none;	
}  

stacksidebar list row:selected,
stacksidebar list row:active,
placessidebar list row:selected, 
placessidebar list row:active, 
placessidebar list row:selected *,
placessidebar list row:active *{
	    background-image: linear-gradient(to bottom,
	                                  shade(@theme_selected_bg_color,0.6 ),
	                                  shade(@theme_selected_bg_color, 1.5));
}


/****************
 * Floating Bar *
 ****************/
floating-bar {
	border-radius: 3px;
	border-width: 0px;
	border-style: solid;
	text-shadow: none;
	color: @theme_fg_color;
	background-image: linear-gradient(to bottom,
	                                  shade(@button_gradient_color_a, 1.5),
	                                  @theme_bg_color 40%,
	                                  shade(@button_gradient_color_b, 0.7));
}

floating-bar.top {
    border-top-right-radius: 0;
    border-top-left-radius: 0;
}

floating-bar.right {
    border-top-right-radius: 0;
    border-bottom-right-radius: 0;
}

floating-bar.bottom {
    border-bottom-right-radius: 0;
    border-bottom-left-radius: 0;
}

floating-bar.left {
    border-top-left-radius: 0;
    border-bottom-left-radius: 0;
}

/*********
 * Views *
 *********/

view,
.view,
.view:disabled {
	background-color: @less_dark_color;
	color: @theme_selected_fg_color;
	border-radius: 0;
	/*border-width: 3;*/
}

view:selected,
view:active, 
.view:selected,
.view:active {
	background-color: shade(@theme_selected_bg_color, 1.23);
	color: @theme_selected_fg_color;
}

view:selected:focus, 
.view:selected:focus {
	background-color: @theme_selected_bg_color;
	color: @theme_selected_fg_color;
}

/* It's better not to have too bright text views. */
textview text,
textview.view:disabled,
GtkHTML { /* For Evolution (not enough; see entries section below) */
	background-color: @view_color;
	color: @theme_main_color;
}

textview text selection,
textview text selection:focus {
	background-color: @theme_selected_bg_color;
	color: @theme_selected_fg_color;
}

/* This is for highlighting the current line in source views. */
textview {
	background-color: #D9D9D9; /* #dddddd; */
	color: @theme_main_color;
}
/* ... */

